# KotakNeoTrade

./: .dockerignore  .env  .env.example  .gitignore  .replit  .session_secret  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOY_TO_RENDER.md  Dockerfile  Procfile  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_FIX.md  app.py  app_backup.py  auto_sync_triggers.py  clear_user_deals.py  cookies.txt  create_user_deals_table.py  dash_charts_app.py  debug_email_settings.py  default_deals_sync.py  deploy.sh  docker-compose.yml  external_users.db  fix_email_database.py  fix_email_schema_endpoint.py  import_csv_data.py  kotak-app.py  kotak_auth_service.py  kotak_models.py  main.py  main_render.py  models.py  models_etf.py  models_reset.py  populate_real_deals.py  production_setup.py  pyproject.toml  realtime_quotes_manager.py  (+24 more)
Scripts/: add_exit_date_column.py  admin_signals_scheduler.py  app_minimal.py  app_new.py  auto_login.py  auto_sync_system.py  auto_sync_triggers.py  backup_manager.py  complete_import.py  create_admin_signals.py  create_initial_etf_trades.py  csv_data_fetcher.py  daily_email_scheduler.py  data_analyzer.py  db_connector.py  default_deals_sync.py  etf_data_scheduler.py  etf_trading_signals.py  export_data.py  external_db_service.py  fallback_data_service.py  fast_etf_service.py  google_finance_cmp_updater.py  google_finance_scheduler.py  import_csv_data.py  import_csv_to_admin_signals.py  init_trading_db.py  initialize_local_data.py  kotak_data_collector.py  kotak_quotes_service.py  live_cmp_service.py  main_minimal.py  main_render.py  models.py  models_etf.py  (+27 more)
(+227 files in other folders)
