[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kotak-neo-trading"
version = "0.1.0"
description = "Advanced Trading Platform with Kotak Neo Integration"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-mail",
    "requests",
    "pandas",
    "numpy",
    "python-dotenv",
    "gunicorn",
    "psycopg2-binary",
    "werkzeug",
    "dash",
    "plotly",
    "python-dateutil"
]